Correcion de actualizacion, y prueba de consulta, registro, actualizacion y eliminacion de un equipo de futbol. Angular, Spring Boot y MongoDb

--- a/src/app/registroEquipos/equipo-list.component.html
+++ b/src/app/registroEquipos/equipo-list.component.html
@@ -35,7 +35,7 @@
             <input class="form-control" type="text" 
              [(ngModel)]="editingEquipo.title" required>
             <span class="edit-actions">
-                <a (click)="updateEquipo(editingTodo)">
+                <a (click)="updateEquipo(editingEquipo)">
                   <i class="material-icons">done</i>
                 </a>
                 <a (click)="clearEditing()">
